--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
           <td><span class="hidden">fluviōs</span></td>
         </tr>
         <tr>
+            <td class="tableVertical">奪格</td>
+            <td><span class="hidden">fluviō</span></td>
+            <td><span class="hidden">fluviīs</span></td>
+          </tr>
+        <tr>
           <td class="tableVertical">呼格</td>
           <td><span class="hidden">fluvie</span></td>
           <td>???</td>
@@ -92,6 +97,11 @@
           <td><span class="hidden">īnsulam</span></td>
           <td><span class="hidden">īnsulās</span></td>
         </tr>
+        <tr>
+            <td class="tableVertical">奪格</td>
+            <td><span class="hidden">īnsulā</span></td>
+            <td><span class="hidden">īnsulīs</span></td>
+          </tr>
       </table>
       <h4 id="-um">-um (oppidum)</h4>
       <table>
@@ -285,6 +295,5 @@
     </section>
    </main>
 </body>
-<script src="jquery-3.7.0.min.js"></script>
 <script src="latin_script.js"></script>
 </html>
